@@ -1,7 +1,8 @@
 0.483 2023-08-22
   [New Features]
     * The ioctlsocket method is added to the Sys::Ioctl class.
-  
+  [Incompatible Changes]
+    * The ioctl method in the Sys::Ioctl throws an exception in Windows.
 0.482 2023-08-22
   [New Features]
     * The ioctl method is added to the Sys class.
